--- a/lab2-nim-es/lab2_nim.ipynb
+++ b/lab2-nim-es/lab2_nim.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>]\n",
-      "[<function pure_random at 0x103a5ab80>, <function gabriele at 0x103a5aaf0>, <function optimal at 0x12884e700>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function optimal at 0x12884e700>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function adaptive1 at 0x103a5af70>, <function optimal at 0x12884e700>, <function adaptive1 at 0x103a5af70>, <function pure_random at 0x103a5ab80>, <function adaptive1 at 0x103a5af70>, <function gabriele at 0x103a5aaf0>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>, <function pure_random at 0x103a5ab80>]\n"
+      "[<function gabriele at 0x106877c10>, <function pure_random at 0x106877b80>, <function adaptive1 at 0x106877d30>, <function gabriele at 0x106877c10>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function pure_random at 0x106877b80>, <function pure_random at 0x106877b80>, <function pure_random at 0x106877b80>, <function adaptive1 at 0x106877d30>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function gabriele at 0x106877c10>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function gabriele at 0x106877c10>]\n",
+      "[<function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function optimal at 0x106305670>, <function gabriele at 0x106877c10>, <function pure_random at 0x106877b80>, <function optimal at 0x106305670>, <function pure_random at 0x106877b80>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function adaptive1 at 0x106877d30>, <function gabriele at 0x106877c10>, <function adaptive1 at 0x106877d30>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function gabriele at 0x106877c10>, <function gabriele at 0x106877c10>, <function pure_random at 0x106877b80>, <function pure_random at 0x106877b80>, <function gabriele at 0x106877c10>, <function optimal at 0x106305670>, <function pure_random at 0x106877b80>, <function adaptive1 at 0x106877d30>, <function pure_random at 0x106877b80>]\n"
      ]
     }
    ],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,55 +474,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0 - Best Fitness: 7 - Avg Fitness: 2.25\n",
-      "Generation 5 - Best Fitness: 10 - Avg Fitness: 5.75\n",
-      "Generation 10 - Best Fitness: 12 - Avg Fitness: 9.05\n",
-      "Generation 15 - Best Fitness: 12 - Avg Fitness: 9.25\n",
-      "Generation 20 - Best Fitness: 12 - Avg Fitness: 9.75\n",
-      "Generation 25 - Best Fitness: 11 - Avg Fitness: 8.95\n",
-      "Generation 30 - Best Fitness: 12 - Avg Fitness: 8.65\n",
-      "Generation 35 - Best Fitness: 12 - Avg Fitness: 7.65\n",
-      "Generation 40 - Best Fitness: 12 - Avg Fitness: 9.15\n",
-      "Generation 45 - Best Fitness: 11 - Avg Fitness: 7.55\n",
-      "Generation 50 - Best Fitness: 9 - Avg Fitness: 7.25\n",
-      "Generation 55 - Best Fitness: 11 - Avg Fitness: 7.6\n",
-      "Generation 60 - Best Fitness: 9 - Avg Fitness: 7.3\n",
-      "Generation 65 - Best Fitness: 11 - Avg Fitness: 7.6\n",
-      "Generation 70 - Best Fitness: 10 - Avg Fitness: 6.55\n",
-      "Generation 75 - Best Fitness: 9 - Avg Fitness: 6.75\n",
-      "Generation 80 - Best Fitness: 12 - Avg Fitness: 7.75\n",
-      "Generation 85 - Best Fitness: 12 - Avg Fitness: 7.0\n",
-      "Generation 90 - Best Fitness: 12 - Avg Fitness: 8.1\n",
-      "Generation 95 - Best Fitness: 11 - Avg Fitness: 7.7\n",
-      "Generation 100 - Best Fitness: 11 - Avg Fitness: 7.35\n",
-      "Generation 105 - Best Fitness: 11 - Avg Fitness: 7.5\n",
-      "Generation 110 - Best Fitness: 12 - Avg Fitness: 7.6\n",
-      "Generation 115 - Best Fitness: 11 - Avg Fitness: 7.35\n",
-      "Generation 120 - Best Fitness: 9 - Avg Fitness: 6.65\n",
-      "Generation 125 - Best Fitness: 10 - Avg Fitness: 6.65\n",
-      "Generation 130 - Best Fitness: 10 - Avg Fitness: 6.6\n",
-      "Generation 135 - Best Fitness: 11 - Avg Fitness: 6.7\n",
-      "Generation 140 - Best Fitness: 10 - Avg Fitness: 6.7\n",
-      "Generation 145 - Best Fitness: 9 - Avg Fitness: 5.95\n",
-      "Generation 150 - Best Fitness: 10 - Avg Fitness: 7.45\n",
-      "Generation 155 - Best Fitness: 10 - Avg Fitness: 7.05\n",
-      "Generation 160 - Best Fitness: 9 - Avg Fitness: 6.05\n",
-      "Generation 165 - Best Fitness: 9 - Avg Fitness: 6.35\n",
-      "Generation 170 - Best Fitness: 11 - Avg Fitness: 6.85\n",
-      "Generation 175 - Best Fitness: 11 - Avg Fitness: 6.4\n",
-      "Generation 180 - Best Fitness: 11 - Avg Fitness: 6.5\n",
-      "Generation 185 - Best Fitness: 13 - Avg Fitness: 6.7\n",
-      "Generation 190 - Best Fitness: 10 - Avg Fitness: 6.25\n",
-      "Generation 195 - Best Fitness: 9 - Avg Fitness: 6.5\n",
+      "Generation 0 - Best Fitness: 7 - Avg Fitness: 2.45\n",
+      "Generation 5 - Best Fitness: 8 - Avg Fitness: 3.8\n",
+      "Generation 10 - Best Fitness: 8 - Avg Fitness: 6.35\n",
+      "Generation 15 - Best Fitness: 8 - Avg Fitness: 5.95\n",
+      "Generation 20 - Best Fitness: 9 - Avg Fitness: 6.05\n",
+      "Generation 25 - Best Fitness: 9 - Avg Fitness: 6.25\n",
+      "Generation 30 - Best Fitness: 9 - Avg Fitness: 5.95\n",
+      "Generation 35 - Best Fitness: 11 - Avg Fitness: 7.35\n",
+      "Generation 40 - Best Fitness: 10 - Avg Fitness: 6.9\n",
+      "Generation 45 - Best Fitness: 12 - Avg Fitness: 6.4\n",
+      "Generation 50 - Best Fitness: 10 - Avg Fitness: 6.55\n",
+      "Generation 55 - Best Fitness: 9 - Avg Fitness: 5.65\n",
+      "Generation 60 - Best Fitness: 11 - Avg Fitness: 6.65\n",
+      "Generation 65 - Best Fitness: 10 - Avg Fitness: 6.85\n",
+      "Generation 70 - Best Fitness: 10 - Avg Fitness: 6.15\n",
+      "Generation 75 - Best Fitness: 11 - Avg Fitness: 5.95\n",
+      "Generation 80 - Best Fitness: 9 - Avg Fitness: 5.4\n",
+      "Generation 85 - Best Fitness: 11 - Avg Fitness: 6.3\n",
+      "Generation 90 - Best Fitness: 9 - Avg Fitness: 5.95\n",
+      "Generation 95 - Best Fitness: 11 - Avg Fitness: 6.25\n",
+      "Generation 100 - Best Fitness: 12 - Avg Fitness: 6.9\n",
+      "Generation 105 - Best Fitness: 11 - Avg Fitness: 8.4\n",
+      "Generation 110 - Best Fitness: 11 - Avg Fitness: 6.95\n",
+      "Generation 115 - Best Fitness: 12 - Avg Fitness: 7.7\n",
+      "Generation 120 - Best Fitness: 12 - Avg Fitness: 8.0\n",
+      "Generation 125 - Best Fitness: 12 - Avg Fitness: 8.05\n",
+      "Generation 130 - Best Fitness: 14 - Avg Fitness: 8.35\n",
+      "Generation 135 - Best Fitness: 11 - Avg Fitness: 7.4\n",
+      "Generation 140 - Best Fitness: 12 - Avg Fitness: 8.3\n",
+      "Generation 145 - Best Fitness: 11 - Avg Fitness: 7.8\n",
+      "Generation 150 - Best Fitness: 11 - Avg Fitness: 7.8\n",
+      "Generation 155 - Best Fitness: 11 - Avg Fitness: 7.35\n",
+      "Generation 160 - Best Fitness: 10 - Avg Fitness: 6.8\n",
+      "Generation 165 - Best Fitness: 11 - Avg Fitness: 7.6\n",
+      "Generation 170 - Best Fitness: 12 - Avg Fitness: 7.95\n",
+      "Generation 175 - Best Fitness: 11 - Avg Fitness: 8.1\n",
+      "Generation 180 - Best Fitness: 11 - Avg Fitness: 7.2\n",
+      "Generation 185 - Best Fitness: 9 - Avg Fitness: 6.7\n",
+      "Generation 190 - Best Fitness: 13 - Avg Fitness: 7.4\n",
+      "Generation 195 - Best Fitness: 12 - Avg Fitness: 7.55\n",
       "\n",
-      "Best Agent -> ['pure_random', 'pure_random', 'pure_random', 'adaptive1', 'gabriele', 'gabriele', 'gabriele', 'adaptive1', 'adaptive1', 'optimal', 'gabriele', 'gabriele', 'pure_random', 'adaptive1', 'adaptive1', 'gabriele', 'gabriele', 'adaptive1', 'optimal', 'gabriele', 'optimal', 'gabriele', 'optimal', 'pure_random', 'gabriele']\n"
+      "Best Agent -> ['pure_random', 'pure_random', 'gabriele', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1', 'pure_random', 'optimal', 'optimal', 'pure_random', 'pure_random', 'pure_random', 'optimal', 'gabriele', 'adaptive1', 'adaptive1', 'optimal', 'gabriele', 'pure_random', 'optimal', 'pure_random', 'gabriele', 'adaptive1', 'adaptive1']\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -578,8 +578,8 @@
      "text": [
       "!FINAL BOSS!\n",
       "1000 matches VS EXPERT AGENT\n",
-      "Evolved Agent -> 402 won!\n",
-      "Random Agent  -> 179 won!\n"
+      "Evolved Agent -> 469 won!\n",
+      "Random Agent  -> 154 won!\n"
      ]
     }
    ],
