--- a/evolutionary-algorithms/one_max.ipynb
+++ b/evolutionary-algorithms/one_max.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameters\n",
     "population_size = 50\n",
-    "string_length = 20\n",
+    "string_length = 1000\n",
     "mutation_rate = 0.01\n",
-    "generations = 100"
+    "generations = 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,36 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 35/100 [00:00<00:00, 493.33it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution found at generation 35\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Solution found at generation 539\n",
+      "fitness: 1000\n"
      ]
     }
    ],
    "source": [
     "def run(population):\n",
     "    # Main loop for evolving the population\n",
-    "    progress = tqdm(range(generations))\n",
-    "    for generation in range(generations):\n",
+    "    # progress = tqdm(range(generations))\n",
+    "    # for generation in range(generations):\n",
+    "    generation=0\n",
+    "    while True:\n",
     "        # Evaluate fitness for each individual in the population\n",
     "        fitness_scores = []\n",
     "        for individual in population:\n",
@@ -97,6 +86,7 @@
     "            fitness_scores.append(f)\n",
     "            if f == string_length:\n",
     "                print(\"Solution found at generation\", generation)\n",
+    "                print(\"fitness:\", f)\n",
     "                return\n",
     "\n",
     "        # Select parents for the next generation using roulette wheel selection\n",
@@ -123,7 +113,8 @@
     "\n",
     "        population = new_population\n",
     "\n",
-    "        progress.update(1)\n",
+    "        # progress.update(1)\n",
+    "        generation += 1\n",
     "\n",
     "    # Find the best solution in the final population\n",
     "    best_solution = max(population, key=fitness)\n",
@@ -152,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
