--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -30,460 +30,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import random, choices, choice, randint,shuffle\n",
+    "import random\n",
     "from tqdm import tqdm\n",
     "import lab9_lib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitness = lab9_lib.make_problem(1)\n",
-    "for n in range(10):\n",
-    "    ind = choices([0, 1], k=10)\n",
-    "    print(f\"{''.join(str(g) for g in ind)}: {fitness(ind):.2%}\")\n",
+    "# fitness = lab9_lib.make_problem(1)\n",
+    "# for n in range(10):\n",
+    "#     ind = random.choices([0, 1], k=10)\n",
+    "#     print(f\"{''.join(str(g) for g in ind)}: {fitness(ind):.2%}\")\n",
     "\n",
-    "print(fitness.calls)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. what\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GA\n"
+    "# print(fitness.calls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem 1: 0.2\n",
+      "Problem 2: 0.51\n",
+      "Problem 3: 0.53\n",
+      "Problem 4: 0.11\n"
+     ]
+    }
+   ],
    "source": [
-    "from concurrent.futures import ThreadPoolExecutor\n",
-    "\n",
-    "class GA:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        fitness,\n",
-    "        population_size=50,\n",
-    "        number_generations=100,\n",
-    "        mutation_rate=0.1,\n",
-    "        genome_size=1000,\n",
-    "        parent_selection_size=10,\n",
-    "    ):\n",
-    "        self.fitness = fitness\n",
+    "class LocalSearchAlgorithm:\n",
+    "    def __init__(self, problem_instance, genome_length, population_size=50, generations=1000):\n",
+    "        self.problem_instance = problem_instance\n",
+    "        self.genome_length = genome_length\n",
     "        self.population_size = population_size\n",
-    "        self.generations = number_generations\n",
-    "        self.population = [\n",
-    "            choices([0, 1], k=genome_size) for _ in range(population_size)\n",
-    "        ]\n",
-    "        self.mutation_rate = mutation_rate\n",
-    "        self.genome_size = genome_size\n",
-    "        self.parent_selection_size = parent_selection_size\n",
+    "        self.generations = generations\n",
     "\n",
-    "    def mutate0(self, individual):\n",
-    "        return [bit ^ (random() < self.mutation_rate) for bit in individual]\n",
+    "    def initialize_population(self):\n",
+    "        return [random.choices([0, 1], k=self.genome_length) for _ in range(self.population_size)]\n",
+    "\n",
+    "    def evaluate_population(self, population):\n",
+    "        return [(individual, self.problem_instance(individual)) for individual in population]\n",
+    "\n",
+    "    def select_parents(self, evaluated_population, num_parents=2):\n",
+    "        return [individual for individual, _ in sorted(evaluated_population, key=lambda x: x[1], reverse=True)[:num_parents]]\n",
     "\n",
     "    def crossover(self, parent1, parent2):\n",
-    "        point = int(random() * self.genome_size)\n",
-    "        # point = self.genome_size // 2\n",
-    "        return parent1[:point] + parent2[point:]\n",
-    "    \n",
-    "    def evaluate_fitness_parallel(self, individual):\n",
-    "        return self.fitness(individual)\n",
+    "        crossover_point = random.randint(1, self.genome_length - 1)\n",
+    "        child = parent1[:crossover_point] + parent2[crossover_point:]\n",
+    "        return child\n",
     "\n",
-    "    def run_evolution(self):\n",
-    "        # for generation in range(self.generations):\n",
-    "        generation = 0\n",
-    "        pbar = tqdm()\n",
-    "        with ThreadPoolExecutor() as executor:\n",
-    "            while True:\n",
-    "                \n",
-    "                fitness_scores = []\n",
-    "                for individual in self.population:\n",
-    "                    f = self.fitness(individual)\n",
-    "                    fitness_scores.append(f)\n",
-    "                    if int(f) == 1:\n",
-    "                        print(\"Solution found at generation\", generation)\n",
-    "                        print(\"Fitness calls:\", self.fitness.calls)\n",
-    "                        return\n",
+    "    def mutate(self, individual, mutation_rate=0.01):\n",
+    "        return [bit if random.random() > mutation_rate else 1 - bit for bit in individual]\n",
+    "\n",
+    "    def run(self):\n",
+    "        population = self.initialize_population()\n",
+    "\n",
+    "        for generation in range(self.generations):\n",
+    "            evaluated_population = self.evaluate_population(population)\n",
+    "\n",
+    "            for _ in range(self.population_size // 2):\n",
+    "                parents = self.select_parents(evaluated_population)\n",
+    "                child = self.crossover(*parents)\n",
+    "                child = self.mutate(child)\n",
+    "                population.append(child)\n",
+    "\n",
+    "            population = population[:self.population_size]\n",
+    "\n",
+    "        best_individual, best_fitness = max(evaluated_population, key=lambda x: x[1])\n",
+    "        return best_individual, best_fitness\n",
     "\n",
     "\n",
-    "                selected_parents=choices(self.population, k=self.population_size,weights=fitness_scores)\n",
+    "genome_length = 1000\n",
     "\n",
-    "                # Create a new population through crossover and mutation\n",
-    "                new_population = []\n",
-    "                for i in range(self.population_size):\n",
-    "                    # Parent selection\n",
-    "                    parent1 = choice(selected_parents)\n",
-    "                    parent2 = choice(selected_parents)\n",
+    "problem_1 = lab9_lib.make_problem(1)\n",
+    "problem_2 = lab9_lib.make_problem(2)\n",
+    "problem_5 = lab9_lib.make_problem(5)\n",
+    "problem_10 = lab9_lib.make_problem(10)\n",
     "\n",
-    "                    # Crossover and mutation\n",
-    "                    child = self.mutate0(self.crossover(parent1, parent2))\n",
+    "algorithm_1 = LocalSearchAlgorithm(problem_1, genome_length)\n",
+    "algorithm_2 = LocalSearchAlgorithm(problem_2, genome_length)\n",
+    "algorithm_5 = LocalSearchAlgorithm(problem_5, genome_length)\n",
+    "algorithm_10 = LocalSearchAlgorithm(problem_10, genome_length)\n",
     "\n",
-    "                    new_population.append(child)\n",
     "\n",
-    "                self.population = new_population\n",
-    "                generation += 1\n",
-    "                pbar.update()\n",
+    "# Parallel thanks chatGPT\n",
+    "import concurrent.futures\n",
     "\n",
-    "                if generation % 1000 == 0:\n",
-    "                    print(f\"gen {generation} best fitness: {max(fitness_scores)}\")\n",
+    "# Create a list of algorithms\n",
+    "algorithms = [algorithm_1, algorithm_2, algorithm_5, algorithm_10]\n",
     "\n",
-    "                if generation > 1e6:\n",
-    "                    print(\"no solution found\")\n",
-    "                    print(\"Best fitness:\", max(fitness_scores))\n",
-    "                    print(\"Fitness calls:\", self.fitness.calls)\n",
-    "                    return"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Istance 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitness = lab9_lib.make_problem(1)\n",
+    "# Create a function to run an algorithm and return the result\n",
+    "def run_algorithm(algorithm):\n",
+    "    return algorithm.run()\n",
     "\n",
-    "ga = GA(\n",
-    "    fitness,\n",
-    "    population_size=100,\n",
-    "    number_generations=200,\n",
-    "    mutation_rate=0.01,\n",
-    "    genome_size=100,\n",
-    "    parent_selection_size=10,\n",
-    ")\n",
-    "ga.run_evolution()\n",
+    "# Create a ThreadPoolExecutor with the desired number of threads\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    # Submit the tasks to the executor and store the futures\n",
+    "    futures = [executor.submit(run_algorithm, algorithm) for algorithm in algorithms]\n",
     "\n",
-    "# 100 -> 30it\n",
-    "# 200 -> 120it\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Istance 2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitness = lab9_lib.make_problem(2)\n",
+    "    # Wait for all the tasks to complete and get the results\n",
+    "    results = [future.result() for future in concurrent.futures.as_completed(futures)]\n",
     "\n",
-    "ga = GA(\n",
-    "    fitness,\n",
-    "    population_size=100,\n",
-    "    number_generations=200,\n",
-    "    mutation_rate=0.01,\n",
-    "    genome_size=200,\n",
-    "    parent_selection_size=10,\n",
-    ")\n",
-    "ga.run_evolution()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Istance 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitness = lab9_lib.make_problem(5)\n",
+    "for i, result in enumerate(results):\n",
+    "    print(f\"Problem {i+1}: {result[1]:.2}\")\n",
     "\n",
-    "ga = GA(\n",
-    "    fitness,\n",
-    "    population_size=100,\n",
-    "    number_generations=200,\n",
-    "    mutation_rate=0.01,\n",
-    "    genome_size=200,\n",
-    "    parent_selection_size=10,\n",
-    ")\n",
-    "ga.run_evolution()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Istance 10\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fitness = lab9_lib.make_problem(10)\n",
-    "\n",
-    "ga = GA(\n",
-    "    fitness,\n",
-    "    population_size=100,\n",
-    "    number_generations=200,\n",
-    "    mutation_rate=0.01,\n",
-    "    genome_size=100,\n",
-    "    parent_selection_size=10,\n",
-    ")\n",
-    "ga.run_evolution()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hill Climbing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class HillClimb:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        fitness,\n",
-    "        instance=1,\n",
-    "        max_iterations=50000,\n",
-    "        neighbourhood_size=10,\n",
-    "        genome_size=1000,\n",
-    "        step_size=1,\n",
-    "    ):\n",
-    "        self.max_iterations = max_iterations\n",
-    "        self.neighbourhood_size = neighbourhood_size\n",
-    "        self.genome_size = genome_size\n",
-    "        self.step_size = step_size  # number of bits to flip\n",
-    "        self.fitness = fitness\n",
-    "        self.progenitor = choices([0, 1], k=genome_size)\n",
-    "        self.instance = instance\n",
-    "\n",
-    "    def generate_neighbour(self, individual):\n",
-    "        neighbours = []\n",
-    "\n",
-    "        for _ in range(self.neighbourhood_size):\n",
-    "            neighbour = individual.copy()\n",
-    "            for i in range(self.step_size):\n",
-    "                index = randint(0, self.genome_size - 1)\n",
-    "                neighbour[index] = neighbour[index] ^ 1\n",
-    "            neighbours.append(neighbour)\n",
-    "\n",
-    "        return neighbours\n",
-    "    \n",
-    "\n",
-    "    def climb(self):\n",
-    "        iter = 0\n",
-    "        best = self.progenitor\n",
-    "        best_fitness = self.fitness(best)\n",
-    "\n",
-    "        saturation = 0\n",
-    "        saturation_limit = 1000\n",
-    "\n",
-    "        while best_fitness < 1.0:\n",
-    "\n",
-    "            if iter % 1000 == 0:\n",
-    "                print(f\"iter {iter} best fitness: {best_fitness}, sum: {sum(best)}\")\n",
-    "\n",
-    "            neighbours = self.generate_neighbour(best)\n",
-    "            fitnesses = [self.fitness(n) for n in neighbours]\n",
-    "            # fitnesses = [sum(n) for n in neighbours]  \n",
-    "            \n",
-    "\n",
-    "            new_best_fitness = max(fitnesses)\n",
-    "            if new_best_fitness > best_fitness:\n",
-    "                best_fitness = new_best_fitness\n",
-    "                best = neighbours[fitnesses.index(new_best_fitness)]\n",
-    "                saturation = 0\n",
-    "            else:\n",
-    "                saturation += 1\n",
-    "                if saturation >= saturation_limit and self.neighbourhood_size <= self.genome_size // 2:\n",
-    "                    self.neighbourhood_size *= 2\n",
-    "                    print(\" saturation, doubling neighbourhood size to\", self.neighbourhood_size ,\"maxed\"if self.neighbourhood_size * 2 > self.genome_size else \"\")\n",
-    "                    saturation = 0\n",
-    "\n",
-    "            if iter > self.max_iterations:\n",
-    "                print(\"no solution found\")\n",
-    "                print(\"Best fitness:\", best_fitness)\n",
-    "                print(\"Fitness calls:\", self.fitness.calls)\n",
-    "                return\n",
-    "            \n",
-    "            iter += 1\n",
-    "\n",
-    "        print(f\"\\nSolution found at iter {iter}\")\n",
-    "        print(\"Fitness calls:\", self.fitness.calls)\n",
-    "        print(\"Check:\", \"OK\" if sum(best) == self.genome_size else \"FAIL\")\n",
-    "        return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class HillClimb2:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        fitness,\n",
-    "        instance=1,\n",
-    "        max_iterations=50000,\n",
-    "        neighbourhood_size=10,\n",
-    "        genome_size=1000,\n",
-    "        step_size=1,\n",
-    "    ):\n",
-    "        self.max_iterations = max_iterations\n",
-    "        self.neighbourhood_size = neighbourhood_size\n",
-    "        self.genome_size = genome_size\n",
-    "        self.step_size = step_size  # number of bits to flip\n",
-    "        self.fitness = fitness\n",
-    "        self.progenitor = choices([0, 1], k=genome_size)\n",
-    "        self.instance = instance\n",
-    "\n",
-    "    def generate_neighbour(self, individual):\n",
-    "        neighbours = []\n",
-    "\n",
-    "        for _ in range(self.neighbourhood_size):\n",
-    "            neighbour = individual.copy()\n",
-    "\n",
-    "            for i in range(self.step_size):\n",
-    "                index = randint(0, self.genome_size - 1)\n",
-    "                neighbour[index] = neighbour[index] ^ 1\n",
-    "\n",
-    "            shuffle(neighbour)\n",
-    "            neighbours.append(neighbour)\n",
-    "\n",
-    "        return neighbours\n",
-    "    \n",
-    "\n",
-    "    def climb(self):\n",
-    "        iter = 0\n",
-    "        best = self.progenitor\n",
-    "        best_fitness = self.fitness(best)\n",
-    "\n",
-    "        saturation = 0\n",
-    "        saturation_limit = 1000\n",
-    "\n",
-    "        while best_fitness < 1.0:\n",
-    "\n",
-    "            if iter % 1000 == 0:\n",
-    "                print(f\"iter {iter} best fitness: {best_fitness}, sum: {sum(best)}\")\n",
-    "\n",
-    "            neighbours = self.generate_neighbour(best)\n",
-    "            fitnesses = [self.fitness(n) for n in neighbours]\n",
-    "  \n",
-    "            \n",
-    "\n",
-    "            new_best_fitness = max(fitnesses)\n",
-    "            if new_best_fitness >= best_fitness:\n",
-    "                best_fitness = new_best_fitness\n",
-    "                best = neighbours[fitnesses.index(new_best_fitness)]\n",
-    "                saturation = 0\n",
-    "            else:\n",
-    "                saturation += 1\n",
-    "                if saturation >= saturation_limit and self.neighbourhood_size <= self.genome_size // 2:\n",
-    "                    self.neighbourhood_size *= 2\n",
-    "                    print(\" saturation, doubling neighbourhood size to\", self.neighbourhood_size ,\"maxed\"if self.neighbourhood_size * 2 > self.genome_size else \"\")\n",
-    "                    saturation = 0\n",
-    "\n",
-    "            # if iter > self.max_iterations:\n",
-    "            #     print(\"no solution found\")\n",
-    "            #     print(\"Best fitness:\", best_fitness)\n",
-    "            #     print(\"Fitness calls:\", self.fitness.calls)\n",
-    "            #     return\n",
-    "            \n",
-    "            iter += 1\n",
-    "\n",
-    "        print(f\"\\nSolution found at iter {iter}\")\n",
-    "        print(\"Fitness calls:\", self.fitness.calls)\n",
-    "        print(\"Check:\", \"OK\" if sum(best) == self.genome_size else \"FAIL\")\n",
-    "        return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instance 1\n",
-    "fitness = lab9_lib.make_problem(1)\n",
-    "\n",
-    "genome_size = 1000\n",
-    "hill_climb = HillClimb2(fitness,instance=1,genome_size=genome_size,max_iterations=50000,neighbourhood_size=1,step_size=1)\n",
-    "hill_climb.climb()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instance 2\n",
-    "fitness = lab9_lib.make_problem(2)\n",
-    "\n",
-    "genome_size = 1000\n",
-    "hill_climb = HillClimb2(fitness,instance=2,genome_size=genome_size,max_iterations=100000,neighbourhood_size=2,step_size=2)\n",
-    "hill_climb.climb()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instance 5\n",
-    "fitness = lab9_lib.make_problem(5)\n",
-    "\n",
-    "genome_size = 1000\n",
-    "hill_climb = HillClimb(fitness,instance=5,genome_size=genome_size,max_iterations=50000,neighbourhood_size=1,step_size=1)\n",
-    "hill_climb.climb()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instance 10\n",
-    "fitness = lab9_lib.make_problem(10)\n",
-    "\n",
-    "# genome_size = 1000\n",
-    "# hill_climb = HillClimb(fitness,instance=10,genome_size=genome_size,max_iterations=50000,neighbourhood_size=1,step_size=1)\n",
-    "# hill_climb.climb()"
+    "\n"
    ]
   }
  ],
