--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,99 +54,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Python code in the lib defines an abstract class `AbstractProblem` and a function `make_problem(a)`.\n",
+    "\n",
+    "The `AbstractProblem` class has the following methods and properties:\n",
+    "\n",
+    "- `__init__`: Initializes the instance variable `_calls` to 0.\n",
+    "- `x`: An abstract property. Subclasses of `AbstractProblem` are expected to implement this.\n",
+    "- `calls`: A property that returns the number of times the instance has been called.\n",
+    "- `onemax`: A static method that takes a genome (a sequence of genes) and returns the sum of its genes, treating each gene as a boolean value.\n",
+    "- `__call__`: A special method that allows instances of the class to be called like functions. It increments `_calls`, computes fitnesses of the genome by slicing it into segments of length `x` and applying `onemax` to each segment, and then computes a value based on these fitnesses.\n",
+    "\n",
+    "The `make_problem(a)` function defines a subclass of `AbstractProblem` with `x` implemented as a property that always returns `a`, and returns this subclass. This allows you to create problems with different values of `x` easily.\n",
+    "\n",
+    "In summary, this code provides a framework for defining and working with optimization problems where the goal is to maximize the sum of genes in a genome, with some penalty for non-maximal segments. The `x` property determines the segment length for this computation. The `calls` property allows you to track how many times a problem instance has been called. The `make_problem(a)` function makes it easy to create problem instances with different segment lengths."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10000/10000 [00:25<00:00, 396.10it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Problem 1: 0.2\n",
-      "Problem 2: 0.51\n",
-      "Problem 3: 0.53\n",
-      "Problem 4: 0.11\n"
+      "0.54\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "class LocalSearchAlgorithm:\n",
-    "    def __init__(self, problem_instance, genome_length, population_size=50, generations=1000):\n",
-    "        self.problem_instance = problem_instance\n",
+    "# solving with GA\n",
+    "\n",
+    "\n",
+    "class GA:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        fitness_function,\n",
+    "        genome_length,\n",
+    "        population_size,\n",
+    "        tournament_size,\n",
+    "        mutation_probability,\n",
+    "        crossover_probability,\n",
+    "        max_iterations,\n",
+    "    ):\n",
+    "        self.fitness_function = fitness_function\n",
     "        self.genome_length = genome_length\n",
     "        self.population_size = population_size\n",
-    "        self.generations = generations\n",
+    "        self.tournament_size = tournament_size\n",
+    "        self.mutation_probability = mutation_probability\n",
+    "        self.crossover_probability = crossover_probability\n",
+    "        self.max_iterations = max_iterations\n",
     "\n",
     "    def initialize_population(self):\n",
-    "        return [random.choices([0, 1], k=self.genome_length) for _ in range(self.population_size)]\n",
+    "        return [\n",
+    "            random.choices([0, 1], k=self.genome_length)\n",
+    "            for _ in range(self.population_size)\n",
+    "        ]\n",
     "\n",
-    "    def evaluate_population(self, population):\n",
-    "        return [(individual, self.problem_instance(individual)) for individual in population]\n",
     "\n",
-    "    def select_parents(self, evaluated_population, num_parents=2):\n",
-    "        return [individual for individual, _ in sorted(evaluated_population, key=lambda x: x[1], reverse=True)[:num_parents]]\n",
     "\n",
     "    def crossover(self, parent1, parent2):\n",
-    "        crossover_point = random.randint(1, self.genome_length - 1)\n",
-    "        child = parent1[:crossover_point] + parent2[crossover_point:]\n",
-    "        return child\n",
+    "        if random.random() < self.crossover_probability:\n",
+    "            crossover_point = random.randint(1, self.genome_length - 1)\n",
+    "            child1 = parent1[:crossover_point] + parent2[crossover_point:]\n",
+    "            child2 = parent2[:crossover_point] + parent1[crossover_point:]\n",
+    "            return child1, child2\n",
+    "        else:\n",
+    "            return parent1, parent2\n",
     "\n",
-    "    def mutate(self, individual, mutation_rate=0.01):\n",
-    "        return [bit if random.random() > mutation_rate else 1 - bit for bit in individual]\n",
+    "    def mutate(self, individual):\n",
+    "        mutated_child =   [1-bit if random.random() < self.mutation_probability else bit for bit in individual]\n",
+    "        return mutated_child\n",
     "\n",
     "    def run(self):\n",
     "        population = self.initialize_population()\n",
+    "        for gen in tqdm(range(self.max_iterations)):\n",
     "\n",
-    "        for generation in range(self.generations):\n",
-    "            evaluated_population = self.evaluate_population(population)\n",
+    "            new_population = []\n",
+    "            fitness_values = [self.fitness_function(ind) for ind in population]\n",
+    "            parent1, parent2 = random.choices(\n",
+    "                population, weights=fitness_values, k=2\n",
+    "            )\n",
     "\n",
     "            for _ in range(self.population_size // 2):\n",
-    "                parents = self.select_parents(evaluated_population)\n",
-    "                child = self.crossover(*parents)\n",
-    "                child = self.mutate(child)\n",
-    "                population.append(child)\n",
+    "                child1, child2 = self.crossover(parent1, parent2)\n",
+    "                child1 = self.mutate(child1)\n",
+    "                child2 = self.mutate(child2)\n",
+    "                new_population.append(child1)\n",
+    "                new_population.append(child2)\n",
     "\n",
-    "            population = population[:self.population_size]\n",
+    "            population = new_population\n",
+    "        return max(fitness_values)\n",
     "\n",
-    "        best_individual, best_fitness = max(evaluated_population, key=lambda x: x[1])\n",
-    "        return best_individual, best_fitness\n",
+    "GENOME_LENGTH = 100\n",
+    "POPULATION_SIZE = 100\n",
+    "TOURNAMENT_SIZE = 10\n",
+    "MUTATION_PROBABILITY = 0.01\n",
+    "CROSSOVER_PROBABILITY = 0.8\n",
+    "MAX_ITERATIONS = 10000\n",
     "\n",
+    "fitness_function = lab9_lib.make_problem(1)\n",
+    "genetic_algorithm = GA(fitness_function, GENOME_LENGTH, POPULATION_SIZE, TOURNAMENT_SIZE, MUTATION_PROBABILITY, CROSSOVER_PROBABILITY, MAX_ITERATIONS)\n",
     "\n",
-    "genome_length = 1000\n",
-    "\n",
-    "problem_1 = lab9_lib.make_problem(1)\n",
-    "problem_2 = lab9_lib.make_problem(2)\n",
-    "problem_5 = lab9_lib.make_problem(5)\n",
-    "problem_10 = lab9_lib.make_problem(10)\n",
-    "\n",
-    "algorithm_1 = LocalSearchAlgorithm(problem_1, genome_length)\n",
-    "algorithm_2 = LocalSearchAlgorithm(problem_2, genome_length)\n",
-    "algorithm_5 = LocalSearchAlgorithm(problem_5, genome_length)\n",
-    "algorithm_10 = LocalSearchAlgorithm(problem_10, genome_length)\n",
-    "\n",
-    "\n",
-    "# Parallel thanks chatGPT\n",
-    "import concurrent.futures\n",
-    "\n",
-    "# Create a list of algorithms\n",
-    "algorithms = [algorithm_1, algorithm_2, algorithm_5, algorithm_10]\n",
-    "\n",
-    "# Create a function to run an algorithm and return the result\n",
-    "def run_algorithm(algorithm):\n",
-    "    return algorithm.run()\n",
-    "\n",
-    "# Create a ThreadPoolExecutor with the desired number of threads\n",
-    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
-    "    # Submit the tasks to the executor and store the futures\n",
-    "    futures = [executor.submit(run_algorithm, algorithm) for algorithm in algorithms]\n",
-    "\n",
-    "    # Wait for all the tasks to complete and get the results\n",
-    "    results = [future.result() for future in concurrent.futures.as_completed(futures)]\n",
-    "\n",
-    "for i, result in enumerate(results):\n",
-    "    print(f\"Problem {i+1}: {result[1]:.2}\")\n",
-    "\n",
-    "\n"
+    "print(genetic_algorithm.run())"
    ]
   }
  ],
