lab9 divide et mutate

--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "from tqdm import tqdm\n",
-    "import lab9_lib"
+    "# import random\n",
+    "# from tqdm import tqdm\n",
+    "# import lab9_lib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,106 +74,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10000/10000 [00:25<00:00, 396.10it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.54\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Instance 1 - (1487, True)\n",
+      "Instance 2 - (2024, True)\n",
+      "Instance 5 - (3041, True)\n",
+      "Instance 10 - (4598, True)\n"
      ]
     }
    ],
    "source": [
-    "# solving with GA\n",
+    "import random\n",
+    "import lab9_lib\n",
     "\n",
     "\n",
-    "class GA:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        fitness_function,\n",
-    "        genome_length,\n",
-    "        population_size,\n",
-    "        tournament_size,\n",
-    "        mutation_probability,\n",
-    "        crossover_probability,\n",
-    "        max_iterations,\n",
-    "    ):\n",
-    "        self.fitness_function = fitness_function\n",
-    "        self.genome_length = genome_length\n",
-    "        self.population_size = population_size\n",
-    "        self.tournament_size = tournament_size\n",
-    "        self.mutation_probability = mutation_probability\n",
-    "        self.crossover_probability = crossover_probability\n",
-    "        self.max_iterations = max_iterations\n",
+    "def mutate(ind, problem_instance, fitness):\n",
+    "    \"\"\"mutate one random gene and return mutated part if fitness is better. Full GA could be used here\"\"\"\n",
+    "    f1 = fitness(ind)\n",
+    "    if f1 == 1.0:\n",
+    "        return ind, f1\n",
     "\n",
-    "    def initialize_population(self):\n",
-    "        return [\n",
-    "            random.choices([0, 1], k=self.genome_length)\n",
-    "            for _ in range(self.population_size)\n",
-    "        ]\n",
+    "    mutated = ind.copy()\n",
+    "    i = random.randrange(problem_instance)\n",
+    "    mutated[i] = 1 - mutated[i]\n",
+    "    f2 = fitness(mutated)\n",
+    "\n",
+    "    if f2 > f1:\n",
+    "        return mutated, f2\n",
+    "\n",
+    "    return ind, f1\n",
     "\n",
     "\n",
+    "def split_progenitor(progenitor, genome_length, problem_instance):\n",
+    "    \"\"\"split progenitors in parts of length problem_instance\"\"\"\n",
+    "    end = (\n",
+    "        genome_length\n",
+    "        if genome_length % problem_instance == 0\n",
+    "        else genome_length - problem_instance\n",
+    "    )  # for non-divisible genome_length by problem_instance\n",
+    "    parts = []\n",
+    "    for i in range(0, end, problem_instance):\n",
+    "        parts.append(progenitor[i : i + problem_instance])\n",
     "\n",
-    "    def crossover(self, parent1, parent2):\n",
-    "        if random.random() < self.crossover_probability:\n",
-    "            crossover_point = random.randint(1, self.genome_length - 1)\n",
-    "            child1 = parent1[:crossover_point] + parent2[crossover_point:]\n",
-    "            child2 = parent2[:crossover_point] + parent1[crossover_point:]\n",
-    "            return child1, child2\n",
-    "        else:\n",
-    "            return parent1, parent2\n",
+    "    return parts\n",
     "\n",
-    "    def mutate(self, individual):\n",
-    "        mutated_child =   [1-bit if random.random() < self.mutation_probability else bit for bit in individual]\n",
-    "        return mutated_child\n",
     "\n",
-    "    def run(self):\n",
-    "        population = self.initialize_population()\n",
-    "        for gen in tqdm(range(self.max_iterations)):\n",
+    "def run(problem_instance, genome_length):\n",
+    "    \"\"\"run the algorithm:\n",
+    "    1. create progenitor\n",
+    "    2. split progenitor in parts\n",
+    "    3. mutate parts until fitness is 1.0\n",
+    "    4. join parts in individual\n",
+    "    5. return number of fitness calls and if individual is correct\n",
+    "    \"\"\"\n",
     "\n",
-    "            new_population = []\n",
-    "            fitness_values = [self.fitness_function(ind) for ind in population]\n",
-    "            parent1, parent2 = random.choices(\n",
-    "                population, weights=fitness_values, k=2\n",
-    "            )\n",
+    "    fitness = lab9_lib.make_problem(problem_instance)\n",
     "\n",
-    "            for _ in range(self.population_size // 2):\n",
-    "                child1, child2 = self.crossover(parent1, parent2)\n",
-    "                child1 = self.mutate(child1)\n",
-    "                child2 = self.mutate(child2)\n",
-    "                new_population.append(child1)\n",
-    "                new_population.append(child2)\n",
+    "    progenitor = random.choices([0, 1], k=genome_length)\n",
+    "    parts = split_progenitor(progenitor, genome_length, problem_instance)\n",
     "\n",
-    "            population = new_population\n",
-    "        return max(fitness_values)\n",
+    "    evolved_parts = []\n",
+    "    for part in parts:\n",
+    "        fit = 0\n",
+    "        while fit < 1.0:\n",
+    "            part, fit = mutate(part, problem_instance, fitness)\n",
+    "        evolved_parts.append(g for g in part)\n",
     "\n",
-    "GENOME_LENGTH = 100\n",
-    "POPULATION_SIZE = 100\n",
-    "TOURNAMENT_SIZE = 10\n",
-    "MUTATION_PROBABILITY = 0.01\n",
-    "CROSSOVER_PROBABILITY = 0.8\n",
-    "MAX_ITERATIONS = 10000\n",
+    "    individual = [gene for part in evolved_parts for gene in part]\n",
+    "    return fitness.calls, sum(individual) == genome_length\n",
     "\n",
-    "fitness_function = lab9_lib.make_problem(1)\n",
-    "genetic_algorithm = GA(fitness_function, GENOME_LENGTH, POPULATION_SIZE, TOURNAMENT_SIZE, MUTATION_PROBABILITY, CROSSOVER_PROBABILITY, MAX_ITERATIONS)\n",
     "\n",
-    "print(genetic_algorithm.run())"
+    "# ---------------------------------------------------\n",
+    "\n",
+    "GENOME_LENGTH = 1000\n",
+    "instances = [1, 2, 5, 10]\n",
+    "# instances = [1, 2, 3, 5, 7, 10, 20, 50, 100, 200, 500] # for testing\n",
+    "\n",
+    "for instance in instances:\n",
+    "    print(f\"Instance {instance} - {run(instance, GENOME_LENGTH)}\")"
    ]
   }
  ],
