lab9 non divisible problem sizes fix

--- a/lab9/lab9.ipynb
+++ b/lab9/lab9.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,33 +74,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance 1 - (1487, True)\n",
-      "Instance 2 - (2024, True)\n",
-      "Instance 5 - (3041, True)\n",
-      "Instance 10 - (4598, True)\n"
+      "Problem instance: 1\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:00<00:00, 130773.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (1485, True)\n",
+      "\n",
+      "Problem instance: 2\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [00:00<00:00, 52993.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (1841, True)\n",
+      "\n",
+      "Problem instance: 3\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 334/334 [00:00<00:00, 26411.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (2381, True)\n",
+      "\n",
+      "Problem instance: 5\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [00:00<00:00, 10470.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (3000, True)\n",
+      "\n",
+      "Problem instance: 7\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 143/143 [00:00<00:00, 4689.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (3920, True)\n",
+      "\n",
+      "Problem instance: 10\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:00<00:00, 2193.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (4644, True)\n",
+      "\n",
+      "Problem instance: 20\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:00<00:00, 478.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (5658, True)\n",
+      "\n",
+      "Problem instance: 50\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:00<00:00, 67.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (7862, True)\n",
+      "\n",
+      "Problem instance: 100\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 14.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (9264, True)\n",
+      "\n",
+      "Problem instance: 200\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:01<00:00,  3.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (10596, True)\n",
+      "\n",
+      "Problem instance: 500\n",
+      "part lengths:  1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:05<00:00,  2.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calls, isSol:  (15362, True)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "import lab9_lib\n",
+    "from tqdm import tqdm\n",
     "\n",
     "\n",
-    "def mutate(ind, problem_instance, fitness):\n",
+    "def mutate(ind, fitness):\n",
     "    \"\"\"mutate one random gene and return mutated part if fitness is better. Full GA could be used here\"\"\"\n",
     "    f1 = fitness(ind)\n",
     "    if f1 == 1.0:\n",
     "        return ind, f1\n",
     "\n",
     "    mutated = ind.copy()\n",
-    "    i = random.randrange(problem_instance)\n",
+    "    i = random.randrange(len(ind))\n",
     "    mutated[i] = 1 - mutated[i]\n",
     "    f2 = fitness(mutated)\n",
     "\n",
@@ -112,14 +303,18 @@
     "\n",
     "def split_progenitor(progenitor, genome_length, problem_instance):\n",
     "    \"\"\"split progenitors in parts of length problem_instance\"\"\"\n",
+    "    divisible = genome_length % problem_instance == 0\n",
+    "\n",
     "    end = (\n",
-    "        genome_length\n",
-    "        if genome_length % problem_instance == 0\n",
-    "        else genome_length - problem_instance\n",
+    "        genome_length if divisible else genome_length - (genome_length % problem_instance)\n",
     "    )  # for non-divisible genome_length by problem_instance\n",
+    "\n",
     "    parts = []\n",
     "    for i in range(0, end, problem_instance):\n",
     "        parts.append(progenitor[i : i + problem_instance])\n",
+    "\n",
+    "    if not divisible:\n",
+    "        parts.append(progenitor[end:])\n",
     "\n",
     "    return parts\n",
     "\n",
@@ -139,11 +334,13 @@
     "    parts = split_progenitor(progenitor, genome_length, problem_instance)\n",
     "\n",
     "    evolved_parts = []\n",
+    "    pbar = tqdm(total=len(parts))\n",
     "    for part in parts:\n",
     "        fit = 0\n",
     "        while fit < 1.0:\n",
-    "            part, fit = mutate(part, problem_instance, fitness)\n",
+    "            part, fit = mutate(part, fitness)\n",
     "        evolved_parts.append(g for g in part)\n",
+    "        pbar.update(1)\n",
     "\n",
     "    individual = [gene for part in evolved_parts for gene in part]\n",
     "    return fitness.calls, sum(individual) == genome_length\n",
@@ -153,10 +350,12 @@
     "\n",
     "GENOME_LENGTH = 1000\n",
     "instances = [1, 2, 5, 10]\n",
-    "# instances = [1, 2, 3, 5, 7, 10, 20, 50, 100, 200, 500] # for testing\n",
+    "instances = [1, 2, 3, 5, 7, 10, 20, 50, 100, 200, 500] # for testing perf and splitting diff numbers\n",
     "\n",
     "for instance in instances:\n",
-    "    print(f\"Instance {instance} - {run(instance, GENOME_LENGTH)}\")"
+    "    print(f\"Problem instance: {instance}\")\n",
+    "    print(\"Calls, isSol: \", run(instance, GENOME_LENGTH))\n",
+    "    print()"
    ]
   }
  ],
